Implement review findings by @grizzly